# mate-xfce-tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mate-xfce-tool.desktop.in
